--- a/src/app/src/main/res/layout/fragment_home.xml
+++ b/src/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,20 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.977" />
+
+    <ImageView
+        android:id="@+id/qr_icon"
+        android:layout_width="330dp"
+        android:layout_height="330dp"
+        android:contentDescription="@string/qr_preview"
+        app:layout_constraintBottom_toTopOf="@+id/text_home"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/qr_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
