--- a/src/app/src/main/res/menu/activity_main_drawer.xml
+++ b/src/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_profile"
             android:icon="@drawable/nav_profile"
             android:title="@string/nav_profile"/>
+        <item
+            android:id="@+id/nav_notifications"
+            android:icon="@drawable/nav_notifications"
+            android:title="Notifications"/>
     </group>
 </menu>
