--- a/src/app/src/main/res/layout/nav_header_main.xml
+++ b/src/app/src/main/res/layout/nav_header_main.xml
@@ -11,11 +11,11 @@
 
     <ImageView
         android:id="@+id/nav_profile_pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:contentDescription="Navigation Header Image"
         android:paddingTop="8dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round" />
 
     <TextView
         android:id="@+id/nav_profile_name"
