Fixed naming, added UI xmls for event and hosted event

--- a/src/app/src/main/res/layout/fragment_event.xml
+++ b/src/app/src/main/res/layout/fragment_event.xml
@@ -20,4 +20,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/event_list_iew"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
