--- a/src/app/src/main/res/layout/fragment_event.xml
+++ b/src/app/src/main/res/layout/fragment_event.xml
@@ -23,7 +23,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/event_list_iew"
+        android:id="@+id/event_list_view"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
