--- a/src/app/src/main/res/layout/fragment_notifications.xml
+++ b/src/app/src/main/res/layout/fragment_notifications.xml
@@ -20,4 +20,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/notifications_list"
+        android:orientation="vertical"
+        android:padding="10dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
