--- a/src/app/src/main/res/menu/activity_main_drawer.xml
+++ b/src/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,8 +17,24 @@
             android:icon="@drawable/nav_hosted_events"
             android:title="@string/nav_hosted_events"/>
         <item
+            android:id="@+id/nav_explore_event"
+            android:icon="@drawable/nav_explore"
+            android:title="@string/nav_explore_events"/>
+        <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/nav_profile"
             android:title="@string/nav_profile"/>
+        <item
+            android:id="@+id/nav_all_profile"
+            android:icon="@drawable/nav_all_profiles"
+            android:title="@string/nav_all_profile"/>
+        <item
+            android:id="@+id/nav_all_event"
+            android:icon="@drawable/nav_all_events"
+            android:title="@string/nav_all_event"/>
+        <item
+            android:id="@+id/nav_all_images"
+            android:icon="@drawable/nav_all_images"
+            android:title="@string/nav_all_image"/>
     </group>
 </menu>
