--- a/src/app/src/main/res/layout/notification_layout.xml
+++ b/src/app/src/main/res/layout/notification_layout.xml
@@ -3,13 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/event_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="10dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="Event"
         android:textSize="30sp">
     </TextView>
@@ -18,8 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/time_text"
-        android:textSize="30sp"
-        android:layout_marginLeft="20dp"
+        android:textSize="20sp"
+        android:layout_marginLeft="40dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="time">
     </TextView>
 
@@ -27,7 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/message_text"
-        android:textSize="30sp"
+        android:textSize="25sp"
+        android:ellipsize="end"
+        android:maxLines="10"
         android:layout_marginLeft="20dp"
         android:text="message">
     </TextView>
