--- a/src/app/src/main/res/layout/fragment_view_event.xml
+++ b/src/app/src/main/res/layout/fragment_view_event.xml
@@ -33,13 +33,14 @@
 
     <TextView
         android:id="@+id/view_event_date"
-        app:layout_constraintTop_toBottomOf="@+id/view_event_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Date|Time"
         android:textColor="@color/pink"
         android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_event_title"
         tools:ignore="HardcodedText" />
 
 
@@ -54,20 +55,20 @@
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/view_event_date"
         tools:ignore="HardcodedText"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="-68dp" />
 
     <Button
-        android:id="@+id/view_event_attend_button"
+        android:id="@+id/view_event_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
         android:backgroundTint="@color/pink"
         android:gravity="center"
-        android:text="Attend event!!!"
+        android:text="Sign up!!!"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_event_description"
         tools:ignore="HardcodedText" />
@@ -76,7 +77,7 @@
         android:id="@+id/view_event_location_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="Location"
         android:textColor="@color/black"
@@ -84,7 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_event_attend_button"
+        app:layout_constraintTop_toBottomOf="@+id/view_event_sign_up"
         tools:ignore="HardcodedText" />
 
     <fragment
@@ -95,8 +96,10 @@
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_event_location_title" />
+        app:layout_constraintTop_toBottomOf="@+id/view_event_location_title"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
