--- a/src/app/src/main/res/layout/fragment_view_event.xml
+++ b/src/app/src/main/res/layout/fragment_view_event.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="20sp"
+    android:layout_marginStart="20sp"
+    android:layout_marginEnd="20sp">
 
     <ImageView
         android:id="@+id/view_event_poster"
