--- a/src/app/src/main/res/layout/fragment_hosted_event.xml
+++ b/src/app/src/main/res/layout/fragment_hosted_event.xml
@@ -6,24 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".user.hostedevent.HostedEventFragment">
 
-    <TextView
-        android:id="@+id/text_hosted_event"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/event_list_iew"
+        android:id="@+id/hosted_event_list_view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
