--- a/src/app/src/main/res/navigation/mobile_navigation.xml
+++ b/src/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,7 +25,11 @@
         android:id="@+id/nav_host_event"
         android:name="com.example.qrcheckin.user.hostedevent.HostedEventFragment"
         android:label="@string/nav_hosted_events"
-        tools:layout="@layout/fragment_hosted_event" />
+        tools:layout="@layout/fragment_hosted_event">
+        <action
+            android:id="@+id/action_nav_event_to_nav_create_event"
+            app:destination="@id/nav_create_event" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_profile"
@@ -38,5 +42,11 @@
         android:name="com.example.qrcheckin.user.viewEvent.ViewEventFragment"
         android:label="view_event"
         tools:layout="@layout/fragment_view_event" />
+
+    <fragment
+        android:id="@+id/nav_create_event"
+        android:name="com.example.qrcheckin.user.createevent.CreateEventFragment"
+        android:label="create_event"
+        tools:layout="@layout/fragment_create_event" />
 
 </navigation>
