--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -135,7 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="512dp"
-        android:text="Hopepage Link"
+        android:text="Homepage Link"
         android:textColor="@color/teal_700"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
