--- a/src/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/src/app/src/main/res/layout/fragment_edit_profile.xml
@@ -18,11 +18,21 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Contact information"
+        android:hint="Email address"
         android:textSize="30sp"
         android:inputType="text"
-        android:id="@+id/edit_profile_contact"
-        tools:ignore="HardcodedText">
+        android:id="@+id/edit_profile_email"
+        tools:ignore="HardcodedText,TextFields">
+    </EditText>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Phone number"
+        android:textSize="30sp"
+        android:inputType="number"
+        android:id="@+id/edit_profile_phone"
+        tools:ignore="HardcodedText,TextFields">
     </EditText>
 
     <EditText
