--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -148,8 +148,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/profile_homepage_link"
-        tools:layout_editor_absoluteX="-3dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_homepage_link">
 
         <TextView
             android:layout_width="match_parent"
@@ -157,9 +157,11 @@
             android:layout_marginStart="30dp"
             android:text="Allow Geolocation?"
             android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="HardcodedText" />
 
         <RadioButton
+            android:id="@+id/profile_geolocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
