--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -6,21 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".user.profile.ProfileFragment">
 
-    <ImageView
-        android:id="@+id/profile_picture"
+    <TextView
+        android:id="@+id/text_profile"
         android:layout_width="match_parent"
-        android:layout_height="180sp"
-        android:layout_marginTop="20sp"
-        android:layout_marginStart="20sp"
-        android:layout_marginEnd="20sp"
-
-        android:contentDescription="Avatar Placeholder"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars"
-        tools:ignore="HardcodedText"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
