--- a/src/app/src/main/res/layout/fragment_create_event.xml
+++ b/src/app/src/main/res/layout/fragment_create_event.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user.browseevent.BrowseEventFragment">
+    tools:context=".user.createevent.CreateEventFragment">
+
     <TextView
-        android:id="@+id/text_browse_event"
+        android:id="@+id/text_create_event"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -20,5 +21,3 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
