--- a/src/app/src/main/res/navigation/mobile_navigation.xml
+++ b/src/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,7 +35,11 @@
         android:id="@+id/nav_explore_event"
         android:name="com.example.qrcheckin.user.exploreevent.ExploreEventFragment"
         android:label="@string/nav_explore_events"
-        tools:layout="@layout/fragment_explore_event" />
+        tools:layout="@layout/fragment_explore_event">
+        <action
+            android:id="@+id/action_nav_explore_event_to_nav_view_event"
+            app:destination="@id/nav_view_event" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_profile"
