Added create notification fragment (needs to be implimented), and re-done how notifications are sent and handled

--- a/src/app/src/main/res/navigation/mobile_navigation.xml
+++ b/src/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,12 @@
         android:label="Notifications"
         tools:layout="@layout/fragment_notifications" />
 
+    <fragment
+        android:id="@+id/nav_create_notifications"
+        android:name="com.example.qrcheckin.user.createnotification.CreateNotificationFragment"
+        android:label="CreateNotifications"
+        tools:layout="@layout/fragment_create_notification" >
+
+    </fragment>
+
 </navigation>
