--- a/src/app/src/main/res/layout/fragment_profile.xml
+++ b/src/app/src/main/res/layout/fragment_profile.xml
@@ -177,7 +177,7 @@
                 android:textSize="20sp"
                 tools:ignore="HardcodedText" />
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/profile_geolocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
